--- a/styles/main.css
+++ b/styles/main.css
@@ -306,3 +306,9 @@ ul {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
 }
+
+.wrapper {
+  width: 90%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
