--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&family=Roboto&display=swap");
 
+html {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 125%; /*For accessibility purpose, keeping the global font size at 20px */
+  line-height: 1.15;
+}
+
 h1,
 h2,
 p {
@@ -7,10 +13,9 @@ p {
   padding: 0;
 }
 
-html {
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 125%; /*For accessibility purpose, keeping the global font size at 20px */
-  line-height: 1.15;
+h1 {
+  font-size: 8.3rem;
+  font-weight: normal;
 }
 
 p {
