--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -1,5 +1,3 @@
-// Header
-
 header {
   height: 100vh;
   background: url(../planted-final-assets/home-image-1.jpg);
@@ -35,7 +33,20 @@ header {
 
 .heroText {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 60%;
+  left: 53%;
   transform: translate(-50%, -50%);
+  line-height: 0.8;
+  z-index: 1;
+
+  & span {
+    color: $sunnyYellow;
+  }
+}
+
+.heroImg {
+  position: absolute;
+  top: 30%;
+  right: 0;
+  z-index: 0;
 }
