--- a/styles/sass/_component.scss
+++ b/styles/sass/_component.scss
@@ -18,3 +18,12 @@
   max-width: 1280px;
   margin: 0 auto;
 }
+
+.btn {
+  background-color: $green;
+  padding: 0.5rem 1.5rem;
+  border: none;
+  font-weight: bold;
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+}
