made header background images more responsive with vw

--- a/styles/main.css
+++ b/styles/main.css
@@ -329,12 +329,26 @@ ul {
 }
 
 header {
-  height: 100vh;
+  position: relative;
+  height: 48vw;
   background: url(../planted-final-assets/home-image-1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
   color: #fff;
+}
+header::before {
+  content: "";
+  background: url(../planted-final-assets/header-box.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 30%;
+  right: 0;
+  width: 40%;
+  height: 80vh;
 }
 
 .navbar {
@@ -378,13 +392,6 @@ header {
 }
 .heroText span {
   color: #f8e71c;
-}
-
-.heroImg {
-  position: absolute;
-  top: 25%;
-  right: 0;
-  z-index: 0;
 }
 
 .about {
