used calc function to make h1 responsive

--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -14,7 +14,8 @@ p {
 }
 
 h1 {
-  font-size: 8.3rem;
+  // font-size: 8.3rem;
+  font-size: calc(2rem + (166 - 40) * ((100vw - 300px) / (1600 - 300)));
   font-weight: normal;
 }
 
