--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -18,7 +18,7 @@ header {
     top: 30%;
     right: 0;
     width: 40%;
-    height: 80vh;
+    height: 40vw;
   }
 }
 
@@ -27,7 +27,8 @@ header {
   padding-top: 1rem;
 
   &__logo {
-    font-size: 2rem;
+    // font-size: 2rem;
+    @include fluidFS(20, 45, 800);
   }
 
   &__items {
@@ -35,7 +36,8 @@ header {
 
     & li {
       margin-left: 3rem;
-      font-size: 0.9rem;
+      @include fluidFS(15, 18, 800);
+      // font-size: calc(15px + (18 - 15) * ((100vw - 300px) / (1600 - 300)));
       font-weight: bold;
       letter-spacing: 1px;
 
