--- a/styles/main.css
+++ b/styles/main.css
@@ -276,7 +276,7 @@ p {
 }
 
 h1 {
-  font-size: calc(2rem + (166 - 40) * ((100vw - 300px) / (1600 - 300)));
+  font-size: calc( 40px + (166 - 40) * ((100vw - 300px) / (1600 - 300)) );
   font-weight: normal;
 }
 
@@ -348,7 +348,7 @@ header::before {
   top: 30%;
   right: 0;
   width: 40%;
-  height: 80vh;
+  height: 40vw;
 }
 
 .navbar {
@@ -358,7 +358,7 @@ header::before {
   padding-top: 1rem;
 }
 .navbar__logo {
-  font-size: 2rem;
+  font-size: calc( 20px + (45 - 20) * ((100vw - 800px) / (1600 - 800)) );
 }
 .navbar__items {
   display: -webkit-box;
@@ -373,7 +373,7 @@ header::before {
 }
 .navbar__items li {
   margin-left: 3rem;
-  font-size: 0.9rem;
+  font-size: calc( 15px + (18 - 15) * ((100vw - 800px) / (1600 - 800)) );
   font-weight: bold;
   letter-spacing: 1px;
 }
