--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,6 +1,5 @@
 @import "setup";
-@import "variables";
-@import "mixins";
+@import "abstracts";
 @import "typography";
 @import "component";
 @import "layout/header";
