--- a/styles/main.css
+++ b/styles/main.css
@@ -423,3 +423,20 @@ header::before {
   font-size: calc( 25px + (56.3 - 25) * ((100vw - 300px) / (1600 - 300)) );
   letter-spacing: 1.3px;
 }
+
+.workshop {
+  padding: min(max(4rem, 2rem + 15vw), 11rem) 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
