--- a/styles/main.css
+++ b/styles/main.css
@@ -319,6 +319,12 @@ ul {
   margin: 0 auto;
 }
 
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .btn {
   background-color: #0e902d;
   padding: 0.7rem 1.5rem;
@@ -489,5 +495,45 @@ header::before {
 
 .feature {
   background-color: #f0efed;
-  padding: min(max(4rem, 2rem + 15vw), 6rem) 0;
+  padding-top: min(max(4rem, 2rem + 15vw), 8rem);
+}
+.feature ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+}
+.feature ul li {
+  width: 50%;
+  margin-bottom: 10%;
+}
+.feature ul li p {
+  padding-left: 2rem;
+}
+.feature__heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+.feature__heading::before {
+  content: "";
+  position: absolute;
+  background-color: #f8e71c;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  z-index: 0;
+  z-index: 0;
+  top: -10px;
+  left: -10px;
+}
+.feature__heading h2 {
+  padding-left: 20px;
+}
+.feature i {
+  font-size: 1.3rem;
+  z-index: 1;
 }
