--- a/styles/sass/layout/_main.scss
+++ b/styles/sass/layout/_main.scss
@@ -83,5 +83,47 @@
 
 .feature {
   background-color: $offWhite;
-  padding: min(max(4rem, 2rem + 15vw), 6rem) 0;
+  padding-top: min(max(4rem, 2rem + 15vw), 8rem);
+
+  & ul {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+
+    & li {
+      width: 50%;
+      margin-bottom: 10%;
+
+      & p {
+        padding-left: 2rem;
+      }
+    }
+  }
+
+  &__heading {
+    display: flex;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      background-color: $sunnyYellow;
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      z-index: 0;
+      z-index: 0;
+      top: -10px;
+      left: -10px;
+    }
+
+    & h2 {
+      padding-left: 20px;
+    }
+  }
+
+  & i {
+    font-size: 1.3rem;
+    z-index: 1;
+  }
 }
