added mixin for navbar hover effect and btn hover

--- a/styles/sass/_abstracts.scss
+++ b/styles/sass/_abstracts.scss
@@ -28,3 +28,15 @@ $green: #0e902d;
 @mixin boxShadow {
   box-shadow: 1rem 1rem $sunnyYellow;
 }
+
+@mixin hoverUnderline {
+  content: "";
+  position: absolute;
+  top: 1rem;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  transform: translateY(0.5rem);
+  opacity: 0;
+  transition: all 0.3s;
+}
