--- a/styles/main.css
+++ b/styles/main.css
@@ -332,6 +332,13 @@ ul {
   font-weight: bold;
   font-size: 0.9rem;
   letter-spacing: 1px;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
+}
+.btn:hover, .btn:focus {
+  background-color: #fff;
+  border: 1px solid #0e902d;
+  color: #0e902d;
 }
 
 .mb-1 {
@@ -391,8 +398,36 @@ header::before {
   font-weight: bold;
   letter-spacing: 1px;
 }
+.navbar__items li a, .navbar__items li:first-of-type a {
+  position: relative;
+  padding-bottom: 2px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
 .navbar__items li:first-of-type a {
   color: #f8e71c;
+}
+.navbar__items li:first-of-type a::after, .navbar__items li a::after {
+  background-color: #fff;
+  content: "";
+  position: absolute;
+  top: 1rem;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  -webkit-transform: translateY(0.5rem);
+          transform: translateY(0.5rem);
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.navbar__items li:first-of-type a:hover::after, .navbar__items li:first-of-type a:focus::after, .navbar__items li a:hover::after, .navbar__items li a:focus::after {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+.navbar__items li a::after {
+  background-color: #f8e71c;
 }
 
 .heroText {
