using relative positioning, offsetted aside on the blog page

--- a/styles/sass/_abstracts.scss
+++ b/styles/sass/_abstracts.scss
@@ -5,6 +5,8 @@ $forestGreen: #074115;
 $sunnyYellow: #f8e71c;
 $green: #0e902d;
 
+$roboto: "Roboto", sans-serif;
+
 // functions
 // @function clamp($min, $desired, $vw, $max) {
 //   $result: min(max(#{$min}rem, #{$desired}rem + #{$vw}vw), #{$max}rem);
