--- a/styles/main.css
+++ b/styles/main.css
@@ -270,6 +270,7 @@ html {
 
 h1,
 h2,
+h3,
 p {
   margin: 0;
   padding: 0;
@@ -315,7 +316,7 @@ ul {
 .wrapper {
   width: 80%;
   height: 100%;
-  max-width: 1280px;
+  max-width: 1600px;
   margin: 0 auto;
 }
 
@@ -347,6 +348,17 @@ ul {
 
 .mb-2 {
   margin-bottom: 2rem;
+}
+
+.full-width {
+  position: relative;
+  left: 50%;
+  right: 50%;
+  max-width: 100vw;
+  width: 100vw;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  overflow: hidden;
 }
 
 .header__home {
@@ -646,4 +658,52 @@ footer {
 }
 .blogHeader__heading {
   margin-top: 22.5%;
+}
+
+.blog {
+  background-color: #f0efed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.blog__aside {
+  position: relative;
+  top: 7vw;
+  width: 23%;
+  height: 100%;
+  margin-left: 10%;
+  background-color: #fff;
+}
+.blog__aside__img {
+  position: relative;
+  margin-top: -2vw;
+  width: 31vw;
+}
+.blog__aside__img img {
+  position: relative;
+  left: -32%;
+  max-width: 100%;
+  width: 100%;
+}
+.blog__aside__text {
+  width: 100%;
+  padding: 0 2rem 1rem 1.5rem;
+}
+.blog__aside__text h3 {
+  margin: 1rem 0;
+}
+.blog__aside__text li {
+  font-family: "Roboto", sans-serif;
+}
+.blog__article {
+  width: 60%;
+}
+.blog__article__img {
+  width: 100%;
+}
+.blog__article__img img {
+  width: 100%;
 }
