--- a/styles/sass/_component.scss
+++ b/styles/sass/_component.scss
@@ -15,7 +15,7 @@
 .wrapper {
   width: 80%;
   height: 100%;
-  max-width: 1280px;
+  max-width: 1600px;
   margin: 0 auto;
 }
 
@@ -46,4 +46,15 @@
 
 .mb-2 {
   margin-bottom: 2rem;
+}
+
+.full-width {
+  position: relative;
+  left: 50%;
+  right: 50%;
+  max-width: 100vw;
+  width: 100vw;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  overflow: hidden;
 }
