--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -28,7 +28,7 @@
 
   &__aside {
     position: relative;
-    top: 7vw;
+    top: 9vw;
     width: 23%;
     height: 100%;
     margin-left: 10%;
@@ -76,13 +76,53 @@
   }
 
   &__article {
+    position: relative;
+    margin-top: -15vw;
     width: 60%;
 
     &__img {
       width: 100%;
+      box-shadow: -1rem 1rem $sunnyYellow;
 
       & img {
+        max-width: 100%;
         width: 100%;
+      }
+    }
+
+    &__text {
+      padding: 4rem 1.5rem;
+
+      &-heading {
+        margin-bottom: 2.5rem;
+
+        & h2 {
+          @include fluidFS(30, 43, 300);
+          letter-spacing: 1.3px;
+        }
+
+        & p {
+          color: $forestGreen;
+          font-style: italic;
+        }
+
+        & span {
+          font-weight: bold;
+        }
+      }
+    }
+
+    &__comment {
+      margin-top: 4rem;
+
+      & h3 {
+        margin-bottom: 2.5rem;
+        @include fluidFS(20, 30, 300);
+      }
+
+      &-user {
+        display: flex;
+        margin-bottom: 2rem;
       }
     }
   }
