--- a/styles/main.css
+++ b/styles/main.css
@@ -724,7 +724,14 @@ footer {
   width: 100%;
 }
 .blog__article__text {
-  padding: 4rem 1.5rem;
+  margin-left: -1rem;
+  padding: 4rem 2.5rem 2rem 2.5rem;
+  border-left-width: 0.3rem;
+  border-left-style: solid;
+  border-left-color: #f8e71c;
+  border-bottom-width: 0.3rem;
+  border-bottom-style: solid;
+  border-bottom-color: #f8e71c;
 }
 .blog__article__text-heading {
   margin-bottom: 2.5rem;
@@ -741,7 +748,7 @@ footer {
   font-weight: bold;
 }
 .blog__article__comment {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 .blog__article__comment h3 {
   margin-bottom: 2.5rem;
