--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -91,7 +91,14 @@
     }
 
     &__text {
-      padding: 4rem 1.5rem;
+      margin-left: -1rem;
+      padding: 4rem 2.5rem 2rem 2.5rem;
+      border-left-width: 0.3rem;
+      border-left-style: solid;
+      border-left-color: $sunnyYellow;
+      border-bottom-width: 0.3rem;
+      border-bottom-style: solid;
+      border-bottom-color: $sunnyYellow;
 
       &-heading {
         margin-bottom: 2.5rem;
@@ -110,10 +117,13 @@
           font-weight: bold;
         }
       }
+
+      &-container {
+      }
     }
 
     &__comment {
-      margin-top: 4rem;
+      margin-top: 2rem;
 
       & h3 {
         margin-bottom: 2.5rem;
