added black background on the navbar of the blog

--- a/styles/sass/_abstracts.scss
+++ b/styles/sass/_abstracts.scss
@@ -4,6 +4,7 @@ $offWhite: #f0efed;
 $forestGreen: #074115;
 $sunnyYellow: #f8e71c;
 $green: #0e902d;
+$black: #000;
 
 $roboto: "Roboto", sans-serif;
 
