--- a/styles/main.css
+++ b/styles/main.css
@@ -640,7 +640,7 @@ ul {
 
 footer {
   padding: 0.5rem;
-  background: #2c2c2c;
+  background: #000;
   color: #f0efed;
   text-align: center;
 }
@@ -651,6 +651,15 @@ footer {
   background: url(../planted-final-assets/blog-header-1.jpg) no-repeat center center fixed;
   background-size: cover;
   color: #fff;
+}
+.blogHeader .navbar {
+  background-color: #000;
+  padding-bottom: 0.4rem;
+}
+.blogHeader .navbar .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 .blogHeader__heading {
   font-size: calc( 30px + (75 - 30) * ((100vw - 300px) / (1600 - 300)) );
@@ -725,7 +734,8 @@ footer {
 }
 .blog__article__text {
   margin-left: -1rem;
-  padding: 4rem 2.5rem 2rem 2.5rem;
+  margin-right: 15%;
+  padding: 4rem 0 2rem 2.5rem;
   border-left-width: 0.3rem;
   border-left-style: solid;
   border-left-color: #f8e71c;
@@ -750,13 +760,22 @@ footer {
 .blog__article__comment {
   margin-top: 2rem;
 }
-.blog__article__comment h3 {
+.blog__article__comment h2 {
   margin-bottom: 2.5rem;
   font-size: calc( 20px + (30 - 20) * ((100vw - 300px) / (1600 - 300)) );
+}
+.blog__article__comment-img {
+  margin-right: 2rem;
 }
 .blog__article__comment-user {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 2rem;
+  margin-bottom: 10%;
+  padding-right: 15%;
+}
+.blog__article__comment-user-text h3 {
+  margin-bottom: 0.2rem;
+  color: #074115;
+  font-size: calc( 20px + (25 - 20) * ((100vw - 300px) / (1600 - 300)) );
 }
