--- a/styles/sass/_abstracts.scss
+++ b/styles/sass/_abstracts.scss
@@ -5,7 +5,9 @@ $forestGreen: #074115;
 $sunnyYellow: #f8e71c;
 $green: #0e902d;
 $black: #000;
+$white: #fff;
 
+$josefinSans: "Josefin Sans", sans-serif;
 $roboto: "Roboto", sans-serif;
 
 // functions
