--- a/styles/main.css
+++ b/styles/main.css
@@ -339,7 +339,6 @@ ul {
 }
 .btn:hover, .btn:focus {
   background-color: #fff;
-  border: 1px solid #0e902d;
   color: #0e902d;
 }
 
@@ -736,12 +735,8 @@ footer {
   margin-left: -1rem;
   margin-right: 15%;
   padding: 4rem 0 2rem 2.5rem;
-  border-left-width: 0.3rem;
-  border-left-style: solid;
-  border-left-color: #f8e71c;
-  border-bottom-width: 0.3rem;
-  border-bottom-style: solid;
-  border-bottom-color: #f8e71c;
+  border-left: 0.3rem solid #f8e71c;
+  border-bottom: 0.3rem solid #f8e71c;
 }
 .blog__article__text-heading {
   margin-bottom: 2.5rem;
@@ -759,6 +754,7 @@ footer {
 }
 .blog__article__comment {
   margin-top: 2rem;
+  margin-right: 15%;
 }
 .blog__article__comment h2 {
   margin-bottom: 2.5rem;
@@ -772,15 +768,18 @@ footer {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 10%;
-  padding-right: 15%;
 }
 .blog__article__comment-user-text h3 {
   margin-bottom: 0.2rem;
   color: #074115;
   font-size: calc( 20px + (25 - 20) * ((100vw - 300px) / (1600 - 300)) );
 }
+.blog__article__form {
+  width: 100%;
+  margin-right: 10%;
+  margin-bottom: 8%;
+}
 .blog__article__form fieldset {
-  border: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -788,17 +787,30 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  border: none;
 }
-.blog__article__form fieldset > * {
-  margin: 2%;
+.blog__article__form fieldset * {
+  font-size: calc( 16px + (20 - 16) * ((100vw - 300px) / (1600 - 300)) );
   font-family: "Josefin Sans", sans-serif;
   font-weight: light;
 }
-.blog__article__form fieldset input {
+.blog__article__form fieldset input, .blog__article__form fieldset textarea {
+  padding: 4%;
   background-color: #f0efed;
-  border: 2px solid #0e902d;
+  border: 3px solid #0e902d;
 }
-.blog__article__form fieldset .btn {
+.blog__article__form fieldset input {
+  width: calc(100% - 15%);
+  padding: 4%;
+  margin: 0 5% 5% 0;
+  border: none;
+  border-bottom: 3px solid #0e902d;
+}
+.blog__article__form fieldset textarea {
+  height: 15vw;
+  margin-bottom: 2rem;
+}
+.blog__article__form fieldset button {
   color: #fff;
 }
 .blog__article__form-container {
@@ -806,18 +818,6 @@ footer {
   display: -ms-flexbox;
   display: flex;
 }
-.blog__article__form-container input::-webkit-input-placeholder {
-  font-size: calc( 16px + (20 - 16) * ((100vw - 300px) / (1600 - 300)) );
-}
-.blog__article__form-container input::-moz-placeholder {
-  font-size: calc( 16px + (20 - 16) * ((100vw - 300px) / (1600 - 300)) );
-}
-.blog__article__form-container input:-ms-input-placeholder {
-  font-size: calc( 16px + (20 - 16) * ((100vw - 300px) / (1600 - 300)) );
-}
-.blog__article__form-container input::-ms-input-placeholder {
-  font-size: calc( 16px + (20 - 16) * ((100vw - 300px) / (1600 - 300)) );
-}
-.blog__article__form-container input::placeholder {
-  font-size: calc( 16px + (20 - 16) * ((100vw - 300px) / (1600 - 300)) );
+.blog__article__form-comment {
+  height: 15vw;
 }
