--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -103,12 +103,8 @@
       margin-left: -1rem;
       margin-right: 15%;
       padding: 4rem 0 2rem 2.5rem;
-      border-left-width: 0.3rem;
-      border-left-style: solid;
-      border-left-color: $sunnyYellow;
-      border-bottom-width: 0.3rem;
-      border-bottom-style: solid;
-      border-bottom-color: $sunnyYellow;
+      border-left: 0.3rem solid $sunnyYellow;
+      border-bottom: 0.3rem solid $sunnyYellow;
 
       &-heading {
         margin-bottom: 2.5rem;
@@ -134,6 +130,7 @@
 
     &__comment {
       margin-top: 2rem;
+      margin-right: 15%;
 
       & h2 {
         margin-bottom: 2.5rem;
@@ -147,7 +144,6 @@
       &-user {
         display: flex;
         margin-bottom: 10%;
-        padding-right: 15%;
 
         &-text h3 {
           margin-bottom: 0.2rem;
@@ -158,33 +154,52 @@
     }
 
     &__form {
+      width: 100%;
+      margin-right: 10%;
+      margin-bottom: 8%;
+
       & fieldset {
-        border: none;
         display: flex;
         flex-direction: column;
+        border: none;
 
-        & > * {
-          margin: 2%;
+        & * {
+          @include fluidFS(16, 20, 300);
           font-family: $josefinSans;
           font-weight: light;
         }
 
-        & input {
+        & input,
+        & textarea {
+          padding: 4%;
           background-color: $offWhite;
-          border: 2px solid $green;
+          border: 3px solid $green;
         }
 
-        & .btn {
+        & input {
+          width: calc(100% - 15%);
+          padding: 4%;
+          margin: 0 5% 5% 0;
+          border: none;
+          border-bottom: 3px solid $green;
+        }
+
+        & textarea {
+          height: 15vw;
+          margin-bottom: 2rem;
+        }
+
+        & button {
           color: $white;
         }
       }
 
       &-container {
         display: flex;
+      }
 
-        & input::placeholder {
-          @include fluidFS(16, 20, 300);
-        }
+      &-comment {
+        height: 15vw;
       }
     }
   }
