--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -1,6 +1,6 @@
 // Header
 
-.blogHeader {
+.header {
   position: relative;
   height: 36vw;
   background: url(../planted-final-assets/blog-header-1.jpg) no-repeat center
