--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -61,8 +61,10 @@
       width: 100%;
       padding: 0 2rem 1.5rem 1.5rem;
 
-      & h3 {
+      & h2 {
         margin: 1rem 0;
+        @include fluidFS(15, 25, 300);
+        letter-spacing: 1px;
       }
 
       &-bottom ul {
