--- a/styles/main.css
+++ b/styles/main.css
@@ -661,7 +661,7 @@ footer {
   display: flex;
 }
 .header__heading {
-  font-size: calc( 30px + (75 - 30) * ((100vw - 300px) / (1600 - 300)) );
+  font-size: calc( 30px + (80 - 30) * ((100vw - 300px) / (1600 - 300)) );
   font-weight: bold;
   color: #f8e71c;
 }
@@ -826,8 +826,16 @@ footer {
 
 .contact .header {
   background: url(../planted-final-assets/contact-header-1.jpg) no-repeat center center fixed;
-  height: 38vw;
+  background-size: cover;
+  height: 36vw;
+}
+.contact .header h1 {
+  margin-top: 18%;
 }
 .contact .header h1 span {
   display: block;
+}
+
+.socialIcons {
+  color: #0e902d;
 }
