--- a/styles/main.css
+++ b/styles/main.css
@@ -299,6 +299,10 @@ ul {
   list-style: none;
 }
 
+fieldset {
+  padding: 0;
+}
+
 .skip-link {
   position: absolute;
   left: -1000px;
@@ -331,6 +335,7 @@ ul {
   background-color: #0e902d;
   padding: 0.7rem 1.5rem;
   border: none;
+  color: #fff;
   font-weight: bold;
   font-size: 0.9rem;
   letter-spacing: 1px;
@@ -812,9 +817,6 @@ footer {
   height: 15vw;
   margin-bottom: 2rem;
 }
-.blog__article .form fieldset button {
-  color: #fff;
-}
 .blog__article .form-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -824,6 +826,9 @@ footer {
   height: 15vw;
 }
 
+.contact {
+  background-color: #f0efed;
+}
 .contact .header {
   background: url(../planted-final-assets/contact-header-1.jpg) no-repeat center center fixed;
   background-size: cover;
@@ -836,20 +841,55 @@ footer {
   display: block;
 }
 
+.mainContact {
+  padding: min(max(4rem, 2rem + 15vw), 6rem) 0;
+}
+
 main .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
+.socialIcons ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 .socialIcons ul li a {
+  margin-right: 1rem;
   color: #0e902d;
 }
 
+.contactInfo-links {
+  margin: 0.5rem 0;
+}
+.contactInfo-links a:first-of-type {
+  display: block;
+  margin: 1rem 0;
+  color: #000;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.contactInfo-links a:nth-child(2) {
+  font-family: "Roboto", sans-serif;
+  color: #000;
+}
+.contactInfo p span {
+  display: block;
+}
+
 .contact .form {
-  width: 100%;
-  margin-right: 10%;
-  margin-bottom: 8%;
+  position: relative;
+  width: 75%;
+  left: 10%;
+  padding: 4%;
+  background-color: #fff;
+  -webkit-box-shadow: -1rem 1rem #f8e71c;
+          box-shadow: -1rem 1rem #f8e71c;
 }
 .contact .form fieldset {
   display: -webkit-box;
@@ -868,7 +908,7 @@ main .wrapper {
 }
 .contact .form fieldset input, .contact .form fieldset textarea {
   padding: 4%;
-  background-color: #f0efed;
+  background-color: #fff;
   border: 3px solid #0e902d;
 }
 .contact .form fieldset input {
@@ -881,9 +921,6 @@ main .wrapper {
 .contact .form fieldset textarea {
   height: 15vw;
   margin-bottom: 2rem;
-}
-.contact .form fieldset button {
-  color: #fff;
 }
 .contact .form-container {
   display: -webkit-box;
