--- a/styles/sass/_abstracts.scss
+++ b/styles/sass/_abstracts.scss
@@ -34,6 +34,10 @@ $roboto: "Roboto", sans-serif;
   box-shadow: 1rem 1rem $sunnyYellow;
 }
 
+@mixin boxShadowR {
+  box-shadow: -1rem 1rem $sunnyYellow;
+}
+
 @mixin hoverUnderline {
   content: "";
   position: absolute;
