--- a/styles/sass/_component.scss
+++ b/styles/sass/_component.scss
@@ -27,6 +27,7 @@
   background-color: $green;
   padding: 0.7rem 1.5rem;
   border: none;
+  color: $white;
   font-weight: bold;
   font-size: 0.9rem;
   letter-spacing: 1px;
@@ -34,7 +35,7 @@
 
   &:hover,
   &:focus {
-    background-color: #fff;
+    background-color: $white;
     color: $green;
   }
 }
