--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -1,31 +1,71 @@
-.contact .header {
-  background: url(../planted-final-assets/contact-header-1.jpg) no-repeat center
-    center fixed;
-  background-size: cover;
-  height: 36vw;
+.contact {
+  background-color: $offWhite;
 
-  & h1 {
-    margin-top: 18%;
-    & span {
-      display: block;
+  & .header {
+    background: url(../planted-final-assets/contact-header-1.jpg) no-repeat
+      center center fixed;
+    background-size: cover;
+    height: 36vw;
+
+    & h1 {
+      margin-top: 18%;
+      & span {
+        display: block;
+      }
     }
   }
 }
 
+.mainContact {
+  padding: min(max(4rem, 2rem + 15vw), 6rem) 0;
+}
+
 main .wrapper {
   display: flex;
+  align-items: center;
 }
 
 .socialIcons {
-  & ul li a {
-    color: $green;
+  & ul {
+    display: flex;
+
+    & li a {
+      margin-right: 1rem;
+      color: $green;
+    }
+  }
+}
+
+.contactInfo {
+  &-links {
+    margin: 0.5rem 0;
+
+    & a:first-of-type {
+      display: block;
+      margin: 1rem 0;
+      color: $black;
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+
+    & a:nth-child(2) {
+      font-family: $roboto;
+      color: $black;
+    }
+  }
+
+  & p span {
+    display: block;
   }
 }
 
 .contact .form {
-  width: 100%;
-  margin-right: 10%;
-  margin-bottom: 8%;
+  position: relative;
+  width: 75%;
+  left: 10%;
+  padding: 4%;
+  background-color: $white;
+  @include boxShadowR;
 
   & fieldset {
     display: flex;
@@ -41,7 +81,7 @@ main .wrapper {
     & input,
     & textarea {
       padding: 4%;
-      background-color: $offWhite;
+      background-color: $white;
       border: 3px solid $green;
     }
 
@@ -56,10 +96,6 @@ main .wrapper {
     & textarea {
       height: 15vw;
       margin-bottom: 2rem;
-    }
-
-    & button {
-      color: $white;
     }
   }
 
