corrected relative path for blog and contact scss files

--- a/styles/main.css
+++ b/styles/main.css
@@ -366,6 +366,10 @@ fieldset {
   overflow: hidden;
 }
 
+i.fa-bars {
+  visibility: hidden;
+}
+
 .header__home {
   position: relative;
   height: 48vw;
