--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -4,5 +4,6 @@
 @import "component";
 @import "layout/header";
 @import "layout/main";
-@import "blog";
-@import "contact";
+@import "layout/blog";
+@import "layout/contact";
+@import "media";
