changed header and main scss files names to be more specific

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -2,8 +2,8 @@
 @import "abstracts";
 @import "typography";
 @import "component";
-@import "layout/header";
-@import "layout/main";
+@import "layout/homeHeader";
+@import "layout/homeMain";
 @import "layout/blog";
 @import "layout/contact";
 @import "media";
