--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -9,4 +9,16 @@
 }
 
 @media (max-width: 940px) {
+  .about {
+    padding: min(max(4rem, 2rem + 15vw), 6rem) 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .feature {
+    padding-top: min(max(4rem, 2rem + 15vw), 5rem);
+  }
+}
+
+@media (max-width: 480px) {
 }
