--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -12,6 +12,19 @@
   .about {
     padding: min(max(4rem, 2rem + 15vw), 6rem) 0;
   }
+
+  .founder {
+    padding: min(max(4rem, 2rem + 15vw), 8rem) 0;
+
+    & .wrapper {
+      flex-direction: column;
+    }
+
+    &__img {
+      width: 50%;
+      margin-bottom: 10%;
+    }
+  }
 }
 
 @media (max-width: 768px) {
